2008-03-11  Matthias Klose  <doko@ubuntu.com>

	* patches/icedtea-gcc-suffix.patch: Update, use GCC_SUFFIX in more
	places.

2008-03-11  Matthias Klose  <doko@ubuntu.com>

	* configure.ac: Check for zip and unzip.
	* configure: Regenerated.

2008-03-10  Lillian Angel  <langel@redhat.com>

	* Makefile.am: Added patches to EXTRA_DIST.
	* Makefile.in: Regenerated.

2008-03-10  Gary Benson  <gbenson@redhat.com>

	* ports/hotspot/src/os_cpu/linux_zero/vm/os_linux_zero.cpp
	(current_stack_region): Rewritten to cope with guard pages and ia64.
	(default_stack_size, default_guard_size): Comment fixes.

2008-03-07  Joshua Sumali  <jsumali@redhat.com>

	* rt/net/sourceforge/jnlp/security/CertsInfoPane.java: Fix null	pointer.

2008-03-06  Joshua Sumali  <jsumali@redhat.com>

	* Makefile.am: Added extra to EXTRA_DIST.
	* Makefile.in: Regenerated.

2008-03-06  Joshua Sumali  <jsumali@redhat.com>

	* Makefile.am: Added new 'extra' targets. These new targets build the
	sources in the extra/ directory to build about.jar, which is the new
	sample jnlp application for javaws. 
	* Makefile.in: Regenerated.
	* generated/sun/awt/X11/generator/sizer.32: Regenerated.
	* rt/net/sourceforge/jnlp/resources/Manifest.mf: Fix boot class typo.
	* rt/net/sourceforge/jnlp/resources/Messages.properties: Improved command
	line options.
	* rt/net/sourceforge/jnlp/runtime/Boot.java: Changed command line
	behaviour. Sample application now only runs if the -about flag is passed.
	* rt/net/sourceforge/jnlp/runtime/JNLPRuntime.java: Remove call to
	printStackTrace.
	* rt/net/sourceforge/jnlp/security/CertsInfoPane.java: Rearranged methods
	and relaxed visibility in some fields/methods for SingleCertInfoPane
	class.
	* rt/net/sourceforge/jnlp/security/SecurityWarningDialog.java: Added
	single certificate dialog showing.
	* rt/net/sourceforge/jnlp/tools/KeyTool.java: Moved KeyStore retrieving to
	new SecurityUtil class.
	* extra/net/sourceforge/jnlp/about/HTMLPanel.java: New File.