@@ -397,12 +397,17 @@ clean-bootstrap-directory:
 	rm -f stamps/bootstrap-directory.stamp
 	rm -rf bootstrap/icedtea
 
+if WITH_OPENJDK
+  BOOTSTRAP_DIRECTORY_STAMP =
+  ICEDTEA_HOME = $(SYSTEM_OPENJDK_DIR)
+else
 if WITH_ICEDTEA
   BOOTSTRAP_DIRECTORY_STAMP =
   ICEDTEA_HOME = $(SYSTEM_ICEDTEA_DIR)
 else
   BOOTSTRAP_DIRECTORY_STAMP = stamps/bootstrap-directory.stamp
   ICEDTEA_HOME = icedtea
+endif
 endif
 
 # bootstrap/jdk1.6.0 to bootstrap/icedtea symlink.
